src/objects/REVVY__MnQuote__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Indicator__c</fullName>
        <formula>IF(REVVY__Current_Status__c == &quot;Cloning in progress...&quot;, IMAGE(&quot;https://c.cs19.content.force.com/servlet/servlet.ImageServer?id=015290000004zI0&amp;oid=00D29000000Cvby&amp;lastMod=1458256003000&quot;, &quot;CLONING in progress&quot;),
IF( 
NOT(ISPICKVAL( REVVY__Status__c , &quot;Ordered&quot;)) &amp;&amp; 
NOT(ISPICKVAL( REVVY__Status__c , &quot;Ready&quot;)) &amp;&amp; 
NOT(ISPICKVAL( REVVY__Status__c , &quot;Submitted&quot;)) &amp;&amp; 
Require_Calculation__c ,
IMAGE(&quot;https://c.cs19.content.force.com/servlet/servlet.ImageServer?id=015290000004tSY&amp;oid=00D29000000Cvby&amp;lastMod=1458683757000&quot;, &quot;Click Get Prices button&quot;, 38, 300), 
&quot;&quot;))</formula>
        <label>Pricing Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>REVVY__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_OCD__c</fullName>
        <formula>IF( TODAY() &gt; REVVY__Expiration_Date__c,
CASE(text(REVVY__Status__c),
&apos;Draft&apos;, IMAGE(&apos;/resource/&apos; + &apos;REVVY__QtDraftExp&apos;,&apos;Expired&apos;, 57.4, 733.4),
&apos;Submitted&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtSubmittedExp&apos;,&apos;Expired&apos;,57.4,733.4),
&apos;Ready&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtReadyExp&apos;,&apos;Expired&apos;,57.4,733.4),
&apos;Converted to Contract&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtConvertedToContract&apos;,&apos;Expired&apos;,50,930),
&apos;Contract Created&apos;,IMAGE(&apos;/resource/&apos; + &apos;OCDQtContractCreatedExpired&apos;,&apos;Expired&apos;,57.4,733.4),
IMAGE(&apos;/resource/&apos; + &apos;OCDQtOrdered&apos;,&apos;Expired&apos;,57.4,733.4)
),
IF(RecordType.Name = &apos;Group Quote&apos;,
CASE(text(REVVY__Status__c),
&apos;Submitted&apos;, IMAGE(&apos;/resource/&apos; + &apos;GQtSubmitted&apos;,&apos;Submitted&apos;,57.4,733.4),
&apos;Ready&apos;, IMAGE(&apos;/resource/&apos; + &apos;GQtReady&apos;,&apos;Ready&apos;,57.4,733.4),
&apos;Contract Created&apos;, IMAGE(&apos;/resource/&apos; + &apos;GQtContractCreated&apos;,&apos;Contract Created&apos;,57,733.4),
If( AND( ISPICKVAL(REVVY__Status__c,&apos;Draft&apos;), OR(REVVY__NeedsApproval__c == true)),
IMAGE(&apos;/resource/&apos; + &apos;GQtDraftNeedsApproval&apos;,&apos;Draft&apos;,67.4,733.4),
IMAGE(&apos;/resource/&apos; + &apos;GQtDraft&apos;,&apos;Draft&apos;,57.4,733.4)
)
),
CASE(text(REVVY__Status__c),
&apos;Submitted&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtSubmitted&apos;,&apos;Submitted&apos;,57.4,733.4),
&apos;Ready&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtReady&apos;,&apos;Ready&apos;,57.4,733.4),
&apos;Converted to Contract&apos;, IMAGE(&apos;/resource/&apos; + &apos;OCDQtConvertedToContract&apos;,&apos;Converted to Contract&apos;,50,930),
&apos;Ordered&apos;,IMAGE(&apos;/resource/&apos; + &apos;OCDQtOrdered&apos;,&apos;Ordered&apos;,57.4,733.4),
If( AND( ISPICKVAL(REVVY__Status__c,&apos;Draft&apos;), OR(REVVY__NeedsApproval__c == true)),
IMAGE(&apos;/resource/&apos; + &apos;OCDQtDraftNeedsApproval&apos;,&apos;Draft&apos;,67.4,733.4),
IMAGE(&apos;/resource/&apos; + &apos;OCDQtDraft&apos;,&apos;Draft&apos;,57.4,733.4)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_RunsPerWeek__c</fullName>
        <defaultValue>7</defaultValue>
        <label>QC Runs/Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final Approval Manager</description>
        <label>Quote Approval Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revvy_Quotes_Approval_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique ID of the account that is associated with the quote.</description>
        <inlineHelpText>Unique ID of the account that is associated with the quote.</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>You should assign only group accounts to group quotes</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Group Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.REVVY__MnIsGroupAccount__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Group Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.REVVY__MnIsGroupAccount__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revvy Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Action__c</fullName>
        <formula>IF(RecordType.Name = &apos;Sales Contract&apos;,
  HYPERLINK(&apos;/apex/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c + &apos;PMnQuoteLifeCycleCtrl?action=&apos;+
    IF(ISPICKVAL(REVVY__Phase__c , &apos;Draft&apos;),&apos;ManageLines&apos;,
      IF(ISPICKVAL(REVVY__Phase__c , &apos;Authoring&apos;)||ISPICKVAL(REVVY__Phase__c, &apos;Collaboration&apos;),&apos;Back&apos;,
      &apos;&apos;)
    )
    +&apos;&amp;quoteId=&apos;+ Id ,IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c +
      IF(ISPICKVAL(REVVY__Phase__c , &apos;Draft&apos;),&apos;quoteButtonManageLines&apos;,
        IF(ISPICKVAL(REVVY__Phase__c , &apos;Authoring&apos;)||ISPICKVAL(REVVY__Phase__c, &apos;Collaboration&apos;),&apos;quoteButtonBack&apos;,&apos;quoteNullimage&apos;)
      ), &apos;&apos;),
    &apos;_self&apos;
  )+
  HYPERLINK(&apos;/apex/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c + &apos;PMnQuoteLifeCycleCtrl?action=&apos;+
    IF(ISPICKVAL(REVVY__Phase__c, &apos;Draft&apos;)&amp;&amp;!REVVY__IsSkipDocumentAssembly__c,&apos;AssembleDocument&apos;,
      IF(ISPICKVAL(REVVY__Phase__c , &apos;Authoring&apos;)||(ISPICKVAL(REVVY__Phase__c, &apos;Draft&apos;)&amp;&amp;REVVY__IsSkipDocumentAssembly__c),&apos;SubmitForApproval&apos;,
          IF(ISPICKVAL(REVVY__Phase__c , &apos;Collaboration&apos;),&apos;SendEmail&apos;,
            IF(ISPICKVAL(REVVY__Phase__c , &apos;Signature&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;Completed&apos;),&apos;Activate&apos;,
              IF(ISPICKVAL(REVVY__Phase__c , &apos;Activation&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;In Effect&apos;),&apos;Amend&apos;,
              &apos;&apos;)
              )
            )
        )
      )
    +&apos;&amp;quoteId=&apos;+ Id ,IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c +
    IF(ISPICKVAL(REVVY__Phase__c, &apos;Draft&apos;)&amp;&amp;!REVVY__IsSkipDocumentAssembly__c,&apos;quoteButtonAssemble&apos;,
      IF(ISPICKVAL(REVVY__Phase__c , &apos;Authoring&apos;)||(ISPICKVAL(REVVY__Phase__c, &apos;Draft&apos;)&amp;&amp;REVVY__IsSkipDocumentAssembly__c),&apos;quoteButtonSubmitForApproval&apos;,
          IF(ISPICKVAL(REVVY__Phase__c , &apos;Collaboration&apos;),&apos;quoteButtonSendEmail&apos;,
            IF(ISPICKVAL(REVVY__Phase__c , &apos;Signature&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;Completed&apos;),&apos;quoteButtonActivate&apos;,
              IF(ISPICKVAL(REVVY__Phase__c , &apos;Activation&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;In Effect&apos;),&apos;quoteButtonAmend&apos;,&apos;quoteNullimage&apos;)
              )
            )
        )
      ), &apos;&apos;),
    &apos;_self&apos;
  )+
  HYPERLINK(&apos;/apex/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c + &apos;PMnQuoteLifeCycleCtrl?action=&apos;+
    IF(ISPICKVAL(REVVY__Phase__c , &apos;Collaboration&apos;)||(ISPICKVAL(REVVY__Phase__c , &apos;Signature&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;In Process&apos;)),&apos;eSignature&apos;,
      &apos;&apos;)
    +&apos;&amp;quoteId=&apos;+ Id ,IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c +
      IF(ISPICKVAL(REVVY__Phase__c , &apos;Collaboration&apos;)||(ISPICKVAL(REVVY__Phase__c , &apos;Signature&apos;)&amp;&amp;ISPICKVAL(REVVY__SubPhase__c, &apos;In Process&apos;)),&apos;quoteButtonESignature&apos;,
        &apos;quoteNullimage&apos;
      ), &apos;&apos;),
    &apos;_self&apos;
  )+
  IF( !ISPICKVAL(REVVY__Phase__c, &apos;Termination&apos;) &amp;&amp;
    !(ISPICKVAL(REVVY__Phase__c, &apos;Activation&apos;) &amp;&amp;
     (ISPICKVAL(REVVY__SubPhase__c, &apos;In Amendment&apos;) || ISPICKVAL(REVVY__SubPhase__c, &apos;Superseded&apos;) ) ),
    HYPERLINK(&apos;javascript:if(confirm(&quot;&apos; + $Label.REVVY__MnQuoteTerminateConfirmMsg + &apos;&quot;)){window.location.href=&quot;/apex/&apos;+$Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c+ &apos;PMnQuoteLifeCycleCtrl?action=Terminate&amp;quoteId=&apos;+ Id+&apos;&quot;}&apos;,
      IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c + &apos;quoteButtonTerminate&apos;, &apos;&apos;)
      ,&apos;_self&apos;),
    &apos;&apos;
  ),
  &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AdjustmentArrow__c</fullName>
        <formula>if ( REVVY__Overall_Discount__c &gt; 0,
                   IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c +     &apos;staticui/uifw/ui/images/icons/discount-down.png&apos;, &apos;down&apos; ),
                   if ( REVVY__Overall_Discount__c &lt; 0,
                     IMAGE(&apos;/resource/&apos; + $Setup.REVVY__MnHierarchicalProperty__c.REVVY__Revvy_Namespace__c +     &apos;staticui/uifw/ui/images/icons/discount-up.png&apos;, &apos;up&apos; ),&apos;&apos;
                     )
                 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>↑↓</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment__c</fullName>
        <formula>abs(REVVY__Overall_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__AmendedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amended From</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__AmendmentIdPrefix__c</fullName>
        <label>Amendment ID Prefix</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AmendmentNumber__c</fullName>
        <description>Amendment #</description>
        <label>Amendment #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__ConfigitId__c</fullName>
        <description>Unique Configit quote ID.</description>
        <inlineHelpText>Configit Quote ID for this record.</inlineHelpText>
        <label>Configit Quote ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique ID of the contact person associated with this quote.</description>
        <inlineHelpText>Unique ID of the contact person associated with this quote.</inlineHelpText>
        <label>Account Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.REVVY__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__ContractEndDate__c</fullName>
        <description>Start date of the contract that is generated from this quote</description>
        <label>Contract End Date(Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REVVY__ContractId__c</fullName>
        <formula>IF(REVVY__AmendmentNumber__c == 0, Substitute(REVVY__Id__c, &quot;Q&quot;, &quot;C&quot;), IF(REVVY__AmendmentNumber__c &lt; 10, Substitute(REVVY__AmendmentIdPrefix__c, &quot;Q&quot;, &quot;C&quot;) + &apos;.0&apos; + TEXT(REVVY__AmendmentNumber__c), Substitute(REVVY__AmendmentIdPrefix__c, &quot;Q&quot;, &quot;C&quot;) + &apos;.&apos; + TEXT(REVVY__AmendmentNumber__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__ContractStartDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>End date of the contract that is generated from this quote</description>
        <label>Contract Start Date(Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REVVY__Currency__c</fullName>
        <description>Currency used in the quote.</description>
        <inlineHelpText>Currency used in the quote.</inlineHelpText>
        <label>Revvy Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Current_Status__c</fullName>
        <formula>IF(text(REVVY__Status__c) == &apos;Draft in progress...&apos;, &apos;Draft&apos;, IF(text(REVVY__Status__c) == &apos;Ordered&apos;, &apos;Ordered&apos;, IF(text(REVVY__Status__c) == &apos;Contract Created&apos;, &apos;Contract Created&apos;, IF(text(REVVY__Status__c) == &apos;Converted to Contract&apos;, &apos;Converted to Contract&apos;, IF (TODAY() &gt; REVVY__Expiration_Date__c, &apos;Expired&apos;, text(REVVY__Status__c))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Description__c</fullName>
        <description>Internal description or note about the quote. This field is not displayed on the proposal for customers.</description>
        <inlineHelpText>Internal description or note about the quote. This field is not displayed on the proposal for customers.</inlineHelpText>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__EndDateContract__c</fullName>
        <description>End date of the contract that is generated from this quote</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__ErrorMessage__c</fullName>
        <description>Error Messages related to quote</description>
        <inlineHelpText>&gt;Error Messages related to quote</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Expiration_Date__c</fullName>
        <defaultValue>NOW() +   VALUE( $Label.REVVY__MnDefaultQuoteExpirationDays )</defaultValue>
        <description>Date when the quote expires.</description>
        <inlineHelpText>Date when the quote expires.</inlineHelpText>
        <label>Expires</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__ExtId__c</fullName>
        <description>Unique ID for each record that can be used to capture quote ID from an external system</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Quote Ext ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__Following_Years_Value_F__c</fullName>
        <description>Recurring charged amount for each year after first year</description>
        <formula>REVVY__Yearly_Total_Value_S__c + 12*REVVY__Monthly_Total_Value_S__c + 52*REVVY__Weekly_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Following Years Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__GPTerm__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Term in years for Gross Profit Analysis calculations</inlineHelpText>
        <label>Gross Profit Analysis Term (Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <displayFormat>Q{00000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>REVVY__IsActiveVersion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Quote Revision</description>
        <label>Active Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsRenewalQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renewal Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSkipDocumentAssembly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Skip Document Assembly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsThirdPartyPaper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Third Party Paper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__LastAggregationDate__c</fullName>
        <label>Last Aggregation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REVVY__LifecycleConfig__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lifecycle Configuration associated with this quote</description>
        <label>Lifecycle Config</label>
        <referenceTo>REVVY__MnLifeCycle__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__MonthlyTotalAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__Monthly_Line_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__MonthlyTotalAfterAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__Monthly_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__MonthlyTotalBeforeAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__Monthly_Value_Before_Discount_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Adjustment1_Absolute_F__c</fullName>
        <description>Aggregate of Adjustment 1 absolute for Monthly products</description>
        <formula>REVVY__Monthly_Value_Before_Discount_S__c - REVVY__Monthly_Cost_Price_Before_Adjustment_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate of Adjustment 1 absolute for Monthly products</inlineHelpText>
        <label>Monthly Mark-ups (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Adjustment1_F__c</fullName>
        <description>Aggregate value of Adjustment 1 in percent for Monthly products</description>
        <formula>IF (BLANKVALUE(REVVY__Monthly_Cost_Price_Before_Adjustment_S__c,0)==0, 0,(REVVY__Monthly_Value_Before_Discount_S__c - REVVY__Monthly_Cost_Price_Before_Adjustment_S__c)/REVVY__Monthly_Cost_Price_Before_Adjustment_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate value of Adjustment 1 in percent for Monthly products</inlineHelpText>
        <label>Monthly Mark-ups (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Cost_Price_Before_Adjustment_S__c</fullName>
        <description>Aggregate of all Monthly cost prices before adjustment from Quote Lines</description>
        <inlineHelpText>Aggregate of all Monthly cost prices before adjustment from Quote Lines</inlineHelpText>
        <label>Monthly Total Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Line_Discount_Absolute__c</fullName>
        <description>Aggregate value of the discount amount offered on products that are billed on a monthly basis.</description>
        <formula>REVVY__Monthly_Value_Before_Discount_S__c  - REVVY__Monthly_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate value of the discounts offered on products that are billed on a monthly basis.</inlineHelpText>
        <label>Monthly Discounts (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Line_Discount__c</fullName>
        <description>Aggregate percentage discount offered for products that are billed on a monthly basis.</description>
        <formula>IF (OR(ISNULL(REVVY__Monthly_Value_Before_Discount_S__c) , ISBLANK(REVVY__Monthly_Value_Before_Discount_S__c), REVVY__Monthly_Value_Before_Discount_S__c &lt;= 0) ,
0,
((REVVY__Monthly_Value_Before_Discount_S__c - REVVY__Monthly_Total_Value_S__c) / REVVY__Monthly_Value_Before_Discount_S__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate percentage discount offered for products that are billed on a monthly basis.</inlineHelpText>
        <label>Monthly Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Margin_Absolute_F__c</fullName>
        <description>Aggregate value of all margin values as absolute for Monthly products</description>
        <formula>REVVY__Monthly_Total_Value_S__c - REVVY__Monthly_Cost_Price_Before_Adjustment_S__c</formula>
        <inlineHelpText>Aggregate value of all margin values as absolute for Monthly products</inlineHelpText>
        <label>Monthly Margins (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Margin_F__c</fullName>
        <description>Aggregate value of margin percent for Monthly products</description>
        <formula>IF (ISBLANK(REVVY__Monthly_Cost_Price_Before_Adjustment_S__c), null,IF (BLANKVALUE(REVVY__Monthly_Total_Value_S__c,0)==0, 0,(REVVY__Monthly_Total_Value_S__c - REVVY__Monthly_Cost_Price_Before_Adjustment_S__c)/REVVY__Monthly_Total_Value_S__c))</formula>
        <inlineHelpText>Aggregate value of margin percent for Monthly products</inlineHelpText>
        <label>Monthly Margins (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Total_Value_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate value of products that are billed on a monthly basis after the discounts are applied.</description>
        <inlineHelpText>Aggregate value of products that are billed on a monthly basis after the discounts are applied.</inlineHelpText>
        <label>Monthly Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Unit_Price_S__c</fullName>
        <description>Aggregate of all Monthly unit prices of sub lines</description>
        <inlineHelpText>Aggregate of all Monthly unit prices of sub lines</inlineHelpText>
        <label>Monthly Total Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Value_Before_Discount_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate value of products that are billed on a monthly basis before the discounts are applied.</description>
        <inlineHelpText>Aggregate value of products that are billed on a monthly basis before the discounts are applied.</inlineHelpText>
        <label>Monthly List</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__NeedsApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set by the system when the workflow suggests an approval is needed for the underlying quote.</description>
        <inlineHelpText>This flag is set by the system when the workflow suggests an approval is needed for the underlying quote.</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__OneTimeTotalAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__One_Time_Line_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__OneTimeTotalAfterAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__One_Time_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__OneTimeTotalBeforeAdjustmentDisplay_F__c</fullName>
        <formula>REVVY__One_Time_Value_Before_Discount_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Adjustment1_Absolute_F__c</fullName>
        <description>Aggregate of Adjustment 1 absolute for one time products</description>
        <formula>REVVY__One_Time_Value_Before_Discount_S__c - REVVY__One_Time_Cost_Price_Before_Adjustment_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate of Adjustment 1 absolute for one time products</inlineHelpText>
        <label>One-time Mark-ups (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Adjustment1_F__c</fullName>
        <description>Aggregate value of Adjustment 1 in percent for one time products</description>
        <formula>IF (BLANKVALUE(REVVY__One_Time_Cost_Price_Before_Adjustment_S__c,0)==0, 0,(REVVY__One_Time_Value_Before_Discount_S__c - REVVY__One_Time_Cost_Price_Before_Adjustment_S__c)/REVVY__One_Time_Cost_Price_Before_Adjustment_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate value of Adjustment 1 in percent for one time products</inlineHelpText>
        <label>One-time Mark-ups (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Cost_Price_Before_Adjustment_S__c</fullName>
        <description>Aggregate of all one time cost prices before adjustment from Quote Lines</description>
        <inlineHelpText>Aggregate of all one time cost prices before adjustment from Quote Lines</inlineHelpText>
        <label>One-time Total Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Line_Discount_Absolute__c</fullName>
        <description>Aggregate value of the discounts offered on products that are billed on a one-time basis.</description>
        <formula>REVVY__One_Time_Value_Before_Discount_S__c  -  REVVY__One_Time_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate value of the discounts offered on products that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Discounts (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Line_Discount__c</fullName>
        <description>Aggregate percentage discount offered on products that are billed on a one-time basis.</description>
        <formula>IF (OR(ISNULL(REVVY__One_Time_Value_Before_Discount_S__c) , ISBLANK(REVVY__One_Time_Value_Before_Discount_S__c), REVVY__One_Time_Value_Before_Discount_S__c &lt;= 0) ,
0,
((REVVY__One_Time_Value_Before_Discount_S__c - REVVY__One_Time_Total_Value_S__c) / REVVY__One_Time_Value_Before_Discount_S__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate percentage discount offered for products that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Margin_Absolute_F__c</fullName>
        <description>Aggregate value of all margin values as absolute for one time products</description>
        <formula>REVVY__One_Time_Total_Value_S__c - REVVY__One_Time_Cost_Price_Before_Adjustment_S__c</formula>
        <inlineHelpText>Aggregate value of all margin values as absolute for one time products</inlineHelpText>
        <label>One-time Margins (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Margin_F__c</fullName>
        <description>Aggregate value of margin percent for one time products</description>
        <formula>IF (ISBLANK(REVVY__One_Time_Cost_Price_Before_Adjustment_S__c), null,IF (BLANKVALUE(REVVY__One_Time_Total_Value_S__c,0)==0, 0,(REVVY__One_Time_Total_Value_S__c - REVVY__One_Time_Cost_Price_Before_Adjustment_S__c)/REVVY__One_Time_Total_Value_S__c))</formula>
        <inlineHelpText>Aggregate value of margin percent for one time products</inlineHelpText>
        <label>One-time Margins (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Total_Value_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate value of products that are billed on a one-time basis after the discounts are applied.</description>
        <inlineHelpText>Aggregate value of products that are billed on a one-time basis after the discounts are applied.</inlineHelpText>
        <label>One-time Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Unit_Price_S__c</fullName>
        <description>Aggregate of all one time unit prices of sub lines</description>
        <inlineHelpText>Aggregate of all one time unit prices of sub lines</inlineHelpText>
        <label>One-time Total Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Value_Before_Discount_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate value of products that are billed on a one-time basis before the discounts are applied.</description>
        <inlineHelpText>Aggregate value of products that are billed on a one-time basis before the discounts are applied.</inlineHelpText>
        <label>One-time List</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
</CustomObject>